# httpaudioplayer

./: Cargo.toml  README
src/: clip_player.rs  main.rs  split_quoted.rs
test/: httpaudioplayer.conf
