[package]
edition = "2018"
name = "httpaudioplayer"
version = "0.1.0"
authors = ["ksb <ksb@fluffware.se>"]

[dependencies]
tokio= {version="1.5", features=["rt", "macros"]}
hyper = {version="0.14", features=["server", "http1", "http2", "tcp"]}
futures = "0.3"
triggered = "0.1"
nom= "6"
portaudio = "0.7.0"
hound = "3.4"